# expandable

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  clippy.toml  justfile  rules.md  rustfmt.toml
.github/: semantic.yml
.github/workflows/: checks.yml  release-plz.yml
doc/: 00-top-image.md  01-textbook-example.md  02-what-can-it-detect.md  03-opinionated.md  98-msrv.md  99-license.md  README.md
expandable-impl/: CHANGELOG.md  Cargo.toml  build.rs
expandable-impl/src/: error.rs  expansion.rs  grammar.rs  lib.rs  list.rs  macros.rs  matcher.rs  repetition_stack.rs  span.rs  states.rs  substitution.rs
expandable-impl/src/grammar/: log.rs
grammar-gen/: Cargo.toml  specs.txt
grammar-gen/src/: chomsky.rs  codegen.rs  common.rs  fmt.rs  grammar.pest  grammar_maker.rs  greibach_normal_form.rs  main.rs  mir.rs  opt.rs  parse.rs  spec_parser.rs
grammar-gen/src/codegen/: rt.rs
rust-grammar-dpdfa/: CHANGELOG.md  Cargo.toml  grammar.rs
rust-grammar-dpdfa/src/: generated.rs  lib.rs  quote.rs  rt.rs  tests.rs  token.rs
specs/: run.rs
specs/ferrocene/: TODO.md
specs/ferrocene/20/1/1/: 10.rs  11.rs  12.rs  6.rs  7.rs  8.rs  9.rs
specs/ferrocene/20/1/2/: 11.rs  12.rs
specs/ferrocene/20/4/2/: 11.rs
src/: error.rs  expansion.rs  grammar.rs  lib.rs  macros.rs  matcher.rs  rustc_diagnostic.rs  states.rs  substitution.rs  syn_shim.rs
tests/ui/: empty_call.rs  empty_expr.rs
tests/ui/fail/: bad_nesting_1.rs  bad_nesting_1.stderr  bad_nesting_2.rs  bad_nesting_2.stderr  bad_range_pattern.rs  bad_range_pattern.stderr  bad_range_pattern.stderr_nightly  bad_range_pattern.stderr_stable  empty_call.rs  empty_call.stderr  expr-tuple.rs  expr-tuple.stderr  fn_args.rs  fn_args.stderr  invalid_fn_calls.rs  invalid_fn_calls.stderr  js_concat.rs  js_concat.stderr  loops.rs  loops.stderr  missing_expr.rs  missing_expr.stderr  my_vec.rs  my_vec.stderr_nightly  my_vec.stderr_stable  path.rs  path.stderr  python_power_operator.rs  python_power_operator.stderr
tests/ui/pass/: all-entry-points.rs  all-fragments.rs  all-macro-examples.rs  all-path-examples.rs  all-pattern-examples.rs  all-structs.rs  all-vis.rs  await.rs  block.rs  blocks-are-insanely-complex.rs  bracket.rs  break.rs  expr-index.rs  expr-tuple.rs  expr_path.rs  factorial_fn.rs  field_access.rs  fn_args.rs  fn_calls.rs  if_.rs  let_.rs  loops.rs  macro-calls.rs  match-expr.rs  method_chain.rs  pat_simple.rs  pub-tuple.rs  range_expr.rs  repetition_nesting.rs  return.rs  simple_maths.rs  underscore-expression.rs
