[workspace]
members = [
    "",
    "expandable-impl",
]

[package]
name = "expandable"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
expandable-impl = { path = "expandable-impl" }
proc-macro2 = "1.0.66"
quote = "1.0"
syn = { version = "2.0", default-features = false, features = ["parsing"] }

[dev-dependencies]
trybuild = "1.0"