[workspace]
members = [
    "",
    "expandable-impl",
    "grammar-gen",
    "rust-grammar-dpdfa"
]

[workspace.package]
license = "MIT OR Apache-2.0"
edition = "2021"

[workspace.dependencies]
# MSRV: 1.70 (checked in CI)
expandable-impl = { path = "expandable-impl", version = "0.1.0" }
# MSRV: 1.70 (checked in CI)
rust-grammar-dpdfa = { path = "rust-grammar-dpdfa", version = "0.1.0" }

[package]
name = "expandable"
version = "0.1.1"
edition.workspace = true
rust-version = "1.70.0"
description = "What if we could check declarative macros before using them?"
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
expandable-impl.workspace = true
# MSRV: 1.56 (from Cargo.toml, checked in CI)
proc-macro2 = "1.0"
# MSRV: 1.56 (README)
quote = "1.0"
# MSRV: 1.56 (README)
syn = { version = "2.0", default-features = false, features = ["parsing"] }

[dev-dependencies]
# MSRV: 1.70 (README)
trybuild = "1.0"
# MSRV: 1.32 (README, checked in CI)
rustc_version = "0.4"
