[package]
name = "expandable-impl"
version = "0.1.0"
edition = "2021"
description = "Name squatting before releasing my pet project - email me if you're interested by this crate name."
license = "MIT OR Apache-2.0"
rust-version = "1.70.0"

[dependencies]
# MSRV: 1.36 (checked in CI)
smallvec = "1.11"
rust-grammar-dpdfa = { path = "../rust-grammar-dpdfa" }

[dev-dependencies]
# MSRV: 1.45 (crate-level documentation)
expect-test = "1.4"
