[package]
name = "expandable-impl"
version = "0.1.0"
description = "What if we could check declarative macros before using them?"
rust-version = "1.70.0"
edition.workspace = true
license.workspace = true

[dependencies]
# MSRV: 1.36 (checked in CI)
smallvec = "1.11"
rust-grammar-dpdfa.workspace = true

[dev-dependencies]
# MSRV: 1.45 (crate-level documentation)
expect-test = "1.4"
