[package]
name = "expandable-impl"
description = "What if we could check declarative macros before using them?"
include = ["/src", "../"]
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
# MSRV: 1.36 (checked in CI)
smallvec = "1.11"
rust-grammar-dpdfa.workspace = true

[dev-dependencies]
# MSRV: 1.45 (crate-level documentation)
expect-test = "1.4"
