[package]
name = "rust-grammar-dpdfa"
version = "0.1.0"
edition.workspace = true
description = "Interruptible parser for Rust for the expandable project"
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smallvec = "1.13"
