[package]
name = "rust-grammar-dpdfa"
description = "Interruptible parser for Rust for the expandable project"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smallvec = "1.13"
